--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,6 @@
-@import "reset";
-@import "variable";
-@import "mixins";
-@import "core";
-@import "cart";
-@import "prodlist";
+@import "/src/sass/reset";
+@import "/src/sass/variable";
+@import "/src/sass/mixins";
+@import "/src/sass/core";
+@import "/src/sass/cart";
+@import "/src/sass/prodlist";
