updated broken styling part

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,6 @@
-@import "/src/sass/reset";
-@import "/src/sass/variable";
-@import "/src/sass/mixins";
-@import "/src/sass/core";
-@import "/src/sass/cart";
-@import "/src/sass/prodlist";
+@import "_reset";
+@import "_variable";
+@import "_mixins";
+@import "_core";
+@import "_cart";
+@import "_prodlist";
